Change book-card layout to grid due to small issues with flexbox on mobile JC-520

--- a/apps/vanilla/src/pages/book-app/style.css
+++ b/apps/vanilla/src/pages/book-app/style.css
@@ -204,7 +204,22 @@ a:visited {
   background-color: var(--surface-color);
 }
 
+/* Grid approach */
+
 .book-group__items {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(148px, 1fr));
+  gap: 16px;
+}
+
+.book-card {
+  max-width: 168px;
+  min-width: 148px;
+}
+
+/* Flex approach with small issues on mobile */
+
+/* .book-group__items {
   display: flex;
   flex-wrap: wrap;
   gap: 16px;
@@ -214,7 +229,7 @@ a:visited {
   max-width: 168px;
   min-width: 148px;
   flex: 1;
-}
+} */
 
 .book-title {
   margin: 8px 0 0;
